tests/ui/associated-types/unconstrained-lifetime-assoc-type.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-lifetime-assoc-type.rs:13:6
   |
LL | impl<'a> Fun for Holder {
   |      ^^ unconstrained lifetime parameter
   |
help: use the lifetime parameter `'a` in the `Holder` type and use it in the type definition
   |
LL ~ struct Holder<'a> {
LL |     x: String,
LL | }
LL |
LL ~ impl<'a> Fun for Holder<'a> {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
